--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # .gitignore 파일에 추가할 내용
 db.sqlite3
-__pycache__/
+accounts/__pycache__/
+chat_project/__pycache__/
+chatbot/__pycache__/
+chatbot/migrations/__pycache__/
 *.pyc
 .DS_Store
 venv/
